# beeek18-translate-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
bot/: handlers.py  transliterate.py
