[project]
name = "beeek18-translate-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.26.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "ty>=0.0.20",
    "watchfiles>=1.1.1",
]
